--- a/example/index.html
+++ b/example/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fryte-ful Demo</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="fryte" data-id="MFu66ye6YWM"></div>
-      <div class="fryte" data-id="sNfocDNZWY8"></div>
-      <div class="fryte" data-id="jsezr0qiFIc"></div>
-      <div class="fryte" data-id="f1XrTzVzbJY"></div>
-    </div>
-    <script src="/assets/fryte.min.js"></script>
-    <script>
-      // Get things started once DOM is ready
-      function init() {
-        Fryte();
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fryte-ful Demo</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="fryte" data-id="MFu66ye6YWM"></div>
+    <div class="fryte" data-id="sNfocDNZWY8"></div>
+    <div class="fryte" data-id="jsezr0qiFIc"></div>
+    <div class="fryte" data-id="f1XrTzVzbJY"></div>
+  </div>
+  <script src="../dist/fryte.min.js"></script>
+  <script>
+    // Get things started once DOM is ready
+    function init() {
+      Fryte()
+    }
+
+    (fn => {
+      if (document.readyState != 'loading') {
+        fn()
+      } else {
+        document.addEventListener('DOMContentLoaded', fn)
       }
-      
-      (fn => {
-        if (document.readyState != 'loading'){
-          fn();
-        } else {
-          document.addEventListener('DOMContentLoaded', fn);
-        }
-      })(init);
-    </script>
-  </body>
+    })(init)
+  </script>
+</body>
+
 </html>
